[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/interactable_object.gd" type="Script" id=1]
[ext_resource path="res://font/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/sprites/ui/interact.png" type="Texture" id=3]

[sub_resource type="Theme" id=1]

[node name="Interactable" type="Area2D"]
script = ExtResource( 1 )

[node name="label_holder" type="Node2D" parent="."]
position = Vector2( -62, 0 )
z_index = 10

[node name="Sprite" type="Sprite" parent="label_holder"]
position = Vector2( 62, 4 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="label_holder"]
visible = false
margin_right = 215.0
margin_bottom = 20.0
theme = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0.180392, 0.180392, 0.180392, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Press 'Space' to interact"

[connection signal="body_entered" from="." to="." method="_on_interact_trigger_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_interact_trigger_body_exited"]
